infra/k8s/node.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-service
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: node
      protocol: TCP
      port: 4000
      targetPort: 4000
